libycp/testsuite/tests/bytecode/Xmodules/module.ycp
{
    module "NameOfModule";

    global integer ag = 1;
    integer al = 2;

    global define void NameOfModule() {
	y2milestone ("I am a constructor\n");
	al = 5;
    }

    global define integer af() { return ag+al; }
}

{
  import "NameOfModule";
  return NameOfModule::af() == 6;
}

{
  import "NameOfModule";

  NameOfModule::ag = 27;
  NameOfModule::al = 27;	// error

  return NameOfModule::ag == 27;
}

{
  import "NameOfModule";

  NameOfModule::ag = 27;

  return NameOfModule::ag == 27;
}

{
   module "A";

   integer a = 1;

   // syntax error, only declarations allowed inside a "module" block
   if (true)
   {
      integer b = 1;
   }

   return a + B::b;		// error B:: undefined
}
